const grpc = require('@grpc/grpc-js');
const ProtoLoader = require('./utils/protoLoader');

/**
 * Cliente gRPC configurado para NGINX load balancing
 */

class GrpcClient {
    constructor(taskServerAddress = 'localhost:5000', authServerAddress = 'localhost:50051') {
        this.taskServerAddress = taskServerAddress; // NGINX
        this.authServerAddress = authServerAddress; // Backend direto ou outro proxy
        this.protoLoader = new ProtoLoader();
        this.authClient = null;
        this.taskClient = null;
        this.currentToken = null;
    }

    async initialize() {
        try {
            // Carregar protobuf
            const authProto = this.protoLoader.loadProto('auth_service.proto', 'auth');
            const taskProto = this.protoLoader.loadProto('task_service.proto', 'tasks');

            const credentials = grpc.credentials.createInsecure();

            this.authClient = new authProto.AuthService(this.authServerAddress, credentials);
            this.taskClient = new taskProto.TaskService(this.taskServerAddress, credentials);

            console.log(`‚úÖ Cliente gRPC inicializado`);
            console.log(`üîπ AuthService: ${this.authServerAddress}`);
            console.log(`üîπ TaskService (via NGINX): ${this.taskServerAddress}`);
        } catch (error) {
            console.error('‚ùå Erro na inicializa√ß√£o do cliente:', error);
            throw error;
        }
    }

    promisify(client, method) {
        return (request) => {
            return new Promise((resolve, reject) => {
                client[method](request, (error, response) => {
                    if (error) reject(error);
                    else {
                        console.log(`‚úÖ [${method}] resposta recebida do servidor gRPC`);
                        resolve(response);
                    }
                });
            });
        };
    }

    async register(userData) {
        const registerPromise = this.promisify(this.authClient, 'Register');
        return await registerPromise(userData);
    }

    async login(credentials) {
        const loginPromise = this.promisify(this.authClient, 'Login');
        const response = await loginPromise(credentials);
        if (response.success) this.currentToken = response.token;
        return response;
    }

    async createTask(taskData) {
        const createPromise = this.promisify(this.taskClient, 'CreateTask');
        return await createPromise({ token: this.currentToken, ...taskData });
    }

    async getTasks(filters = {}) {
        const getTasksPromise = this.promisify(this.taskClient, 'GetTasks');
        return await getTasksPromise({ token: this.currentToken, ...filters });
    }

    async getTask(taskId) {
        const getTaskPromise = this.promisify(this.taskClient, 'GetTask');
        return await getTaskPromise({ token: this.currentToken, task_id: taskId });
    }

    async updateTask(taskId, updates) {
        const updatePromise = this.promisify(this.taskClient, 'UpdateTask');
        return await updatePromise({ token: this.currentToken, task_id: taskId, ...updates });
    }

    async deleteTask(taskId) {
        const deletePromise = this.promisify(this.taskClient, 'DeleteTask');
        return await deletePromise({ token: this.currentToken, task_id: taskId });
    }

    async getStats() {
        const statsPromise = this.promisify(this.taskClient, 'GetTaskStats');
        return await statsPromise({ token: this.currentToken });
    }

    streamTasks(filters = {}) {
        const stream = this.taskClient.StreamTasks({ token: this.currentToken, ...filters });
        stream.on('data', (task) => console.log('üìã Tarefa via stream:', task));
        stream.on('end', () => console.log('üìã Stream finalizado'));
        stream.on('error', (err) => console.error('‚ùå Erro no stream:', err));
        return stream;
    }

    streamNotifications() {
        const stream = this.taskClient.StreamNotifications({ token: this.currentToken });
        stream.on('data', (notification) => console.log('üîî Notifica√ß√£o via stream:', notification));
        stream.on('end', () => console.log('üîî Stream de notifica√ß√µes finalizado'));
        stream.on('error', (err) => console.error('‚ùå Erro no stream:', err));
        return stream;
    }
}

// Demonstra√ß√£o de uso
async function demonstrateGrpcClient() {
    const client = new GrpcClient(); // usa NGINX para TaskService

    try {
        await client.initialize();

        console.log('\n1Ô∏è‚É£ Registrando usu√°rio...');
        const registerResponse = await client.register({
            email: 'usuario@teste.com',
            username: 'usuarioteste',
            password: 'senha123',
            first_name: 'Jo√£o',
            last_name: 'Silva'
        });
        console.log('Registro:', registerResponse.message);

        console.log('\n2Ô∏è‚É£ Fazendo login...');
        const loginResponse = await client.login({
            identifier: 'usuario@teste.com',
            password: 'senha123'
        });
        console.log('Login:', loginResponse.message);

        console.log('\n3Ô∏è‚É£ Criando tarefa...');
        const createResponse = await client.createTask({
            title: 'Estudar gRPC',
            description: 'Aprender Protocol Buffers e streaming',
            priority: 2
        });
        console.log('Tarefa criada:', createResponse.message, `(atendida pelo servidor ${createResponse.serverPort})`);

        console.log('\n4Ô∏è‚É£ Listando tarefas...');
        const tasksResponse = await client.getTasks({ page: 1, limit: 10 });
        console.log(`Encontradas ${tasksResponse.tasks.length} tarefas`);

    } catch (error) {
        console.error('‚ùå Erro na demonstra√ß√£o:', error);
    }
}

// Executar demonstra√ß√£o se arquivo for executado diretamente
if (require.main === module) demonstrateGrpcClient();

module.exports = GrpcClient;
